[package]
name = "f1-led-circuit-convert-to-binary-new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postcard = { version = "1.0.8", features = ["alloc"] }
serde = "1.0.204"
serde_derive = "1.0.204"
serde_json = "1.0.121"
csv = "1.3.0"
bincode = "1.3.3"
heapless = "0.8.0"